--- a/src/components/styles/Instructions.css
+++ b/src/components/styles/Instructions.css
@@ -3,6 +3,7 @@
     line-height: 50px;
     letter-spacing: 1.5px;
     padding-bottom: 160px;
+    margin: 0 auto;
 }
 
 .instruction-title {
