--- a/src/components/styles/MyLocations.css
+++ b/src/components/styles/MyLocations.css
@@ -107,6 +107,7 @@
     height: 100%;
     align-items: center;
     display: flex;
+    justify-content: center;
 }
 
 .close-btn {
